--- a/MyShop/WebRoot/WEB-INF/classes/params.properties
+++ b/MyShop/WebRoot/WEB-INF/classes/params.properties
@@ -1,7 +1,7 @@
 #数据库配置文件
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql: 127.0.0.1:3306/myshop?useUnicode=true&characterEncoding=utf-8
-user=root
+user=Admin
 password=123456
 minIdle=45
 maxIdle=50
