sff-提交后台页面
Change-Id: I5b848de9fdc0127b5f3528ab9b5ad7b0562d12c9

--- a/MyShop/.settings/org.eclipse.core.resources.prefs
+++ b/MyShop/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//WebRoot/400.jsp=UTF-8
 encoding//WebRoot/WEB-INF/pre/common/nav.jsp=UTF-8
+encoding//WebRoot/WEB-INF/pre/common/shop_left.jsp=UTF-8
 encoding//WebRoot/WEB-INF/pre/jsp/common/footer.jsp=UTF-8
 encoding//WebRoot/WEB-INF/pre/jsp/common/js.jsp=UTF-8
 encoding//WebRoot/WEB-INF/pre/jsp/pre/common/footer.jsp=UTF-8
