--- a/MyShop/WebRoot/WEB-INF/classes/database.properties
+++ b/MyShop/WebRoot/WEB-INF/classes/database.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3366/myshop?useUnicode=true&characterEncoding=utf-8
+url=jdbc:mysql://127.0.0.1:3306/myshop?useUnicode=true&characterEncoding=utf-8
 user=root
-password=root
+password=
 minIdle=45
 maxIdle=50
 initialSize=5
