--- a/MyShop/resources/params.properties
+++ b/MyShop/resources/params.properties
@@ -1,8 +1,8 @@
 #数据库配置文件
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql: 127.0.0.1:3366/myshop?useUnicode=true&characterEncoding=utf-8
-user=Admin
-password=123456
+user=root
+password=root
 minIdle=45
 maxIdle=50
 initialSize=5
